Fix main layout on small screens

--- a/preschoolfront/src/styles.css
+++ b/preschoolfront/src/styles.css
@@ -10,11 +10,18 @@ html,
 body,
 .main-banner {
     height: 100%;
+    flex-basis: 100%;
 }
 main {
-  display: flex;
   margin-top: 20px;
 }
+@media and screen(min-width: 360px){
+  main {
+    display: flex;
+    flex-basis: 100%;
+  }
+}
+
 
 .title-text {
   font-size: 1.425rem;
@@ -31,6 +38,7 @@ main {
     background-size: cover;
 
     display: flex;
+    flex-basis: 100%;
     align-items: center;
     justify-content: center;
 }
@@ -39,35 +47,11 @@ main {
   background-color: #405d75; 
 }
 
-.product-card .action-buttons {
+/*.product-card .action-buttons {
     position: absolute;
     right: 5px;
     top: 5px;
-}
-
-.product-card .rating {
-  /*position: absolute;
-  margin-top: -16px;
-  right: 10px;
-  background-color: #0d47a1;
-  padding: .4rem 1rem;
-  font-size: .8rem;*/
-
-  /*line-height: 1;*/
-  display: inline-block;
-  /*font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;*/
-}
+}*/
 
 
 /*span.rating {
@@ -78,7 +62,7 @@ main {
     line-height: 2;
 }*/
 
-.product-card .action-buttons .btn-floating .fa, .product-card .action-buttons .btn-floating .material-icons {
+/*.product-card .action-buttons .btn-floating .fa, .product-card .action-buttons .btn-floating .material-icons {
     font-size: 14px;
     margin-top: 1px;
 }
@@ -88,4 +72,4 @@ main {
     height: 37px;
     width: 37px;
     line-height: 0;
-}
+}*/
